build-log2.txt
cargo :    Compiling 
proc-macro2 v1.0.106
En línea: 1 Carácter: 185
+ ... ay-channel; cargo 
build --target 
wasm32-unknown-unknown 
--release 2>& ...
+                 ~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo        
      : NotSpecified: (   
    Compiling proc-macr   
 o2 v1.0.106:String) [    
], RemoteException
    + FullyQualifiedError 
   Id : NativeCommandErr  
  or
 
   Compiling 
unicode-ident v1.0.24
   Compiling quote v1.0.45
   Compiling serde_core 
v1.0.228
   Compiling zmij v1.0.21
   Compiling serde 
v1.0.228
   Compiling serde_json 
v1.0.149
   Compiling itoa v1.0.17
   Compiling memchr v2.8.0
   Compiling typenum 
v1.19.0
   Compiling 
version_check v0.9.5
   Compiling ident_case 
v1.0.1
   Compiling strsim 
v0.11.1
   Compiling autocfg 
v1.5.0
   Compiling semver 
v1.0.27
   Compiling schemars 
v0.8.22
   Compiling dyn-clone 
v1.0.20
   Compiling 
data-encoding v2.10.0
   Compiling cpufeatures 
v0.2.17
   Compiling cfg-if v1.0.4
   Compiling ethnum v1.5.2
   Compiling escape-bytes 
v0.1.1
   Compiling either 
v1.15.0
   Compiling thiserror 
v1.0.69
   Compiling hashbrown 
v0.16.1
   Compiling equivalent 
v1.0.2
   Compiling prettyplease 
v0.2.37
   Compiling fnv v1.0.7
   Compiling 
generic-array v0.14.9
   Compiling 
rustc_version v0.4.1
   Compiling itertools 
v0.10.5
   Compiling heck v0.5.0
   Compiling num-traits 
v0.2.19
   Compiling byteorder 
v1.5.0
   Compiling zerocopy 
v0.8.42
   Compiling indexmap 
v2.13.0
   Compiling base64 
v0.22.1
   Compiling heapless 
v0.8.0
   Compiling getrandom 
v0.2.17
   Compiling 
stable_deref_trait v1.2.1
   Compiling 
static_assertions v1.1.0
   Compiling utf8parse 
v0.2.2
   Compiling 
curve25519-dalek v4.1.3
   Compiling colorchoice 
v1.0.5
error: the 
wasm*-unknown-unknown 
targets are not supported 
by default, you may need 
to enable the "js" 
feature. For more 
information see: https://d
ocs.rs/getrandom/#webassem
bly-support
   --> C:\Users\Handi\Desk
top\Meridian\.cargo\regist
ry\src\index.crates.io-194
9cf8c6b5b557f\getrandom-0.
2.17\src\lib.rs:346:9
    |
346 | /         
compile_error!("the 
wasm*-unknown-unknown 
targets are not supported 
by \
347 | |                   
      default, you may 
need to enable the \"js\" 
feature. \
348 | |                   
      For more 
information see: \
349 | |                   
      https://docs.rs/getr
andom/#webassembly-support
");
    | |___________________
__________________________
__________________________
_^

error[E0433]: failed to 
resolve: use of 
unresolved module or 
unlinked crate `imp`
   --> C:\Users\Handi\Desk
top\Meridian\.cargo\regist
ry\src\index.crates.io-194
9cf8c6b5b557f\getrandom-0.
2.17\src\lib.rs:402:9
    |
402 |         imp::getrand
om_inner(dest)?;
    |         ^^^ use of 
unresolved module or 
unlinked crate `imp`
    |
    = help: if you wanted 
to use a crate named 
`imp`, use `cargo add 
imp` to add it to your 
`Cargo.toml`

For more information 
about this error, try 
`rustc --explain E0433`.
error: could not compile 
`getrandom` (lib) due to 
2 previous errors
warning: build failed, 
waiting for other jobs to 
finish...
